--- a/kampus.ipynb
+++ b/kampus.ipynb
@@ -547,7 +547,7 @@
    ],
    "source": [
     "for col in df_num.columns:\n",
-    "    sns.boxplot(df_num[col]);\n",
+    "    sns.boxplot(df_num[col])\n",
     "    plt.show()"
    ]
   },
@@ -1364,7 +1364,7 @@
     }
    ],
    "source": [
-    "sns.countplot(data=df, y='RetailerCountry');\n",
+    "sns.countplot(data=df, y='RetailerCountry')\n",
     "plt.title('Q Star Score Review (General)')"
    ]
   },
